--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    background-color:#9e2626;
+    background-color: #9e2626;
     color: white;
-    font-family: "Bai Jamjuree", sans-serif;
+    font-family: "Lora", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,9 +10,10 @@ body {
 }
 
 button {
-    background-color: #64A712;
-    color: white;
-    font-family: "Bai Jamjuree", sans-serif;
+    background-color: #ffffff;
+    color: BLACK;
+    font-family: "Lora", sans-serif;
+    font-size: 18px;
 }
 
 .passo {
@@ -29,5 +30,5 @@ main {
 }
 
 img {
-    max-width: 90%;
+    max-width: 400px;
 }
